--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,7 @@ flutter:
     - lib/pages/assets/line3.svg
     - lib/pages/assets/smallArrow.svg
     - lib/pages/assets/backButton.svg
+    - lib/pages/assets/twoDaysArrow.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
